--- a/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb
+++ b/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb
@@ -1,5 +1,31 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "name": "l01c01_introduction_to_colab_and_python.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Jaidon-Smith/examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -11,12 +37,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "Eq10uEbw0E4l"
       },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,7 +53,9 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -71,14 +97,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "X9uIpOS2zx7k"
       },
-      "outputs": [],
       "source": [
         "print(\"Hello World\")"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -92,11 +118,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "pRllo2HLfXiu"
       },
-      "outputs": [],
       "source": [
         "def HelloWorldXY(x, y):\n",
         "  if (x < 10):\n",
@@ -111,18 +135,20 @@
         "  print(\"--- Now running with i: {}\".format(i))\n",
         "  r = HelloWorldXY(i,i)\n",
         "  print(\"Result from HelloWorld: {}\".format(r))"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "lHNmDCh0JpVP"
       },
-      "outputs": [],
       "source": [
         "print(HelloWorldXY(1,2))"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -137,11 +163,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "m8YQN1H41L-Y"
       },
-      "outputs": [],
       "source": [
         "print(\"Iterate over the items. `range(2)` is like a list [0,1].\")\n",
         "for i in range(2):\n",
@@ -156,21 +180,23 @@
         "while i < 2:\n",
         "  print(i)\n",
         "  i += 1"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "vIgmFZq4zszl"
       },
-      "outputs": [],
       "source": [
         "print(\"Python supports standard key words like continue and break\")\n",
         "while True:\n",
         "  print(\"Entered while\")\n",
         "  break"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -188,11 +214,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "4Dxk4q-jzEy4"
       },
-      "outputs": [],
       "source": [
         "import numpy as np  # Make numpy available using np.\n",
         "\n",
@@ -207,62 +231,64 @@
         "print(\"\\nPrinting each element and their index\")\n",
         "for i,e in enumerate(a):\n",
         "  print(\"Index: {}, was: {}\".format(i, e))"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "RTa8_9G3LV03"
       },
-      "outputs": [],
       "source": [
         "print(\"\\nShowing some basic math on arrays\")\n",
         "b = np.array([0,1,4,3,2])\n",
         "print(\"Max: {}\".format(np.max(b)))\n",
         "print(\"Average: {}\".format(np.average(b)))\n",
         "print(\"Max index: {}\".format(np.argmax(b)))"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "9YaGj5n4LW7P"
       },
-      "outputs": [],
       "source": [
         "print(\"\\nYou can print the type of anything\")\n",
         "print(\"Type of b: {}, type of b[0]: {}\".format(type(b), type(b[0])))"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "V6ilVhi9LXn_"
       },
-      "outputs": [],
       "source": [
         "print(\"\\nUse numpy to create a [3,3] dimension array with random number\")\n",
         "c = np.random.rand(3, 3)\n",
         "print(c)"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "W_Q-DkFCLYGA"
       },
-      "outputs": [],
       "source": [
         "print(\"\\nYou can print the dimensions of arrays\")\n",
         "print(\"Shape of a: {}\".format(a.shape))\n",
         "print(\"Shape of b: {}\".format(b.shape))\n",
         "print(\"Shape of c: {}\".format(c.shape))\n",
         "print(\"...Observe, Python uses both [0,1,2] and (0,1,2) to specify lists\")"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -284,28 +310,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "cLkfhyzq0W2y"
       },
-      "outputs": [],
       "source": [
         "print(\"\\nDoing $ls on filesystem\")\n",
         "!ls -l\n",
         "!pwd"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "gR2WTN1cOZ1n"
       },
-      "outputs": [],
       "source": [
         "print(\"Install numpy\")  # Just for test, numpy is actually preinstalled in all Colab instances\n",
         "!pip install numpy"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -324,17 +350,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "xU-cJbMCR61P"
       },
-      "outputs": [],
       "source": [
         "!pwd\n",
         "!cd /\n",
         "!ls -l\n",
         "print(\"Hello\")"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -348,7 +374,7 @@
         "* Many of the exercises in the course executes more quickly by using GPU runtime: Runtime | Change runtime type | Hardware accelerator | GPU\n",
         "\n",
         "**Some final words on Colab**\n",
-        "*   You execute each cell in order, you can edit \u0026 re-execute cells if you want\n",
+        "*   You execute each cell in order, you can edit & re-execute cells if you want\n",
         "*   Sometimes, this could have unintended consequences. For example, if you add a dimension to an array and execute the cell multiple times, then the cells after may not work. If you encounter problem reset your environment:\n",
         "  *   Runtime -> Restart runtime... Resets your Python shell\n",
         "  *   Runtime -> Restart all runtimes... Will reset the Colab image, and get you back to a 100% clean environment\n",
@@ -356,22 +382,8 @@
         "* Colabs in this course are loaded from GitHub. Save to your Google Drive if you want a copy with your code/output: File -> Save a copy in Drive...\n",
         "\n",
         "**Learn More**\n",
-        "*   Check out [this](https://www.youtube.com/watch?v=inN8seMm7UI\u0026list=PLQY2H8rRoyvwLbzbnKJ59NkZvQAW9wLbx\u0026index=3) episode of #CodingTensorFlow, and don't forget to subscribe to the YouTube channel ;)\n"
+        "*   Check out [this](https://www.youtube.com/watch?v=inN8seMm7UI&list=PLQY2H8rRoyvwLbzbnKJ59NkZvQAW9wLbx&index=3) episode of #CodingTensorFlow, and don't forget to subscribe to the YouTube channel ;)\n"
       ]
     }
-  ],
-  "metadata": {
-    "accelerator": "GPU",
-    "colab": {
-      "collapsed_sections": [],
-      "name": "l01c01_introduction_to_colab_and_python.ipynb",
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
