--- a/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb
+++ b/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb
@@ -7,8 +7,7 @@
       "name": "l01c01_introduction_to_colab_and_python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Jaidon-Smith/examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -54,7 +43,7 @@
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -119,7 +108,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pRllo2HLfXiu"
+        "id": "pRllo2HLfXiu",
+        "outputId": "6819ac98-86d7-484f-8106-2945ec5120db",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 230
+        }
       },
       "source": [
         "def HelloWorldXY(x, y):\n",
@@ -136,19 +130,52 @@
         "  r = HelloWorldXY(i,i)\n",
         "  print(\"Result from HelloWorld: {}\".format(r))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--- Now running with i: 8\n",
+            "Hello World, x was < 10\n",
+            "Result from HelloWorld: 16\n",
+            "--- Now running with i: 13\n",
+            "Hello World, x was >= 10 but < 20\n",
+            "Result from HelloWorld: 26\n",
+            "--- Now running with i: 18\n",
+            "Hello World, x was >= 10 but < 20\n",
+            "Result from HelloWorld: 36\n",
+            "--- Now running with i: 23\n",
+            "Hello World, x was >= 20\n",
+            "Result from HelloWorld: 46\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lHNmDCh0JpVP"
+        "id": "lHNmDCh0JpVP",
+        "outputId": "77ce9c84-fc94-4f3b-9d2e-0969a7d2cc68",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
       },
       "source": [
         "print(HelloWorldXY(1,2))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello World, x was < 10\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -215,7 +242,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4Dxk4q-jzEy4"
+        "id": "4Dxk4q-jzEy4",
+        "outputId": "a72228e5-4046-492c-d94f-bba1b2d50c98",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 194
+        }
       },
       "source": [
         "import numpy as np  # Make numpy available using np.\n",
@@ -232,13 +264,35 @@
         "for i,e in enumerate(a):\n",
         "  print(\"Index: {}, was: {}\".format(i, e))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Current array: ['Hello' 'World' '!']\n",
+            "Printing each element\n",
+            "Hello\n",
+            "World\n",
+            "!\n",
+            "\n",
+            "Printing each element and their index\n",
+            "Index: 0, was: Hello\n",
+            "Index: 1, was: World\n",
+            "Index: 2, was: !\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RTa8_9G3LV03"
+        "id": "RTa8_9G3LV03",
+        "outputId": "83f724ab-b77e-48fe-c0ef-241816ac56fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        }
       },
       "source": [
         "print(\"\\nShowing some basic math on arrays\")\n",
@@ -247,38 +301,87 @@
         "print(\"Average: {}\".format(np.average(b)))\n",
         "print(\"Max index: {}\".format(np.argmax(b)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Showing some basic math on arrays\n",
+            "Max: 4\n",
+            "Average: 2.0\n",
+            "Max index: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9YaGj5n4LW7P"
+        "id": "9YaGj5n4LW7P",
+        "outputId": "c91ac08b-dcfe-431f-f45f-a30d00442580",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
       },
       "source": [
         "print(\"\\nYou can print the type of anything\")\n",
         "print(\"Type of b: {}, type of b[0]: {}\".format(type(b), type(b[0])))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "You can print the type of anything\n",
+            "Type of b: <class 'numpy.ndarray'>, type of b[0]: <class 'numpy.int64'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "V6ilVhi9LXn_"
+        "id": "V6ilVhi9LXn_",
+        "outputId": "67de49cf-f6a9-4c3f-9be2-807301121a38",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        }
       },
       "source": [
         "print(\"\\nUse numpy to create a [3,3] dimension array with random number\")\n",
         "c = np.random.rand(3, 3)\n",
         "print(c)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Use numpy to create a [3,3] dimension array with random number\n",
+            "[[0.28863593 0.71579674 0.58887132]\n",
+            " [0.8553762  0.021172   0.72426928]\n",
+            " [0.62453614 0.42670122 0.23767759]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W_Q-DkFCLYGA"
+        "id": "W_Q-DkFCLYGA",
+        "outputId": "e972c1a8-c600-4b11-f3d0-01965db17bdb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 123
+        }
       },
       "source": [
         "print(\"\\nYou can print the dimensions of arrays\")\n",
@@ -287,8 +390,21 @@
         "print(\"Shape of c: {}\".format(c.shape))\n",
         "print(\"...Observe, Python uses both [0,1,2] and (0,1,2) to specify lists\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "You can print the dimensions of arrays\n",
+            "Shape of a: (3,)\n",
+            "Shape of b: (5,)\n",
+            "Shape of c: (3, 3)\n",
+            "...Observe, Python uses both [0,1,2] and (0,1,2) to specify lists\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -311,27 +427,58 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cLkfhyzq0W2y"
+        "id": "cLkfhyzq0W2y",
+        "outputId": "b2610e04-6373-44a2-d498-05dd16e5a38f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        }
       },
       "source": [
         "print(\"\\nDoing $ls on filesystem\")\n",
         "!ls -l\n",
         "!pwd"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Doing $ls on filesystem\n",
+            "total 4\n",
+            "drwxr-xr-x 1 root root 4096 Sep 28 16:35 sample_data\n",
+            "/content\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gR2WTN1cOZ1n"
+        "id": "gR2WTN1cOZ1n",
+        "outputId": "618e20da-696f-46ff-dc31-d92ec6495503",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
       },
       "source": [
         "print(\"Install numpy\")  # Just for test, numpy is actually preinstalled in all Colab instances\n",
         "!pip install numpy"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Install numpy\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (1.18.5)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -351,16 +498,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xU-cJbMCR61P"
+        "id": "xU-cJbMCR61P",
+        "outputId": "90700592-d526-45ae-f173-b5841a62d84b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
       },
       "source": [
         "!pwd\n",
         "!cd /\n",
-        "!ls -l\n",
+        "!ls\n",
         "print(\"Hello\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content\n",
+            "sample_data\n",
+            "Hello\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
