Removed links to other repository

--- a/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb
+++ b/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb
@@ -7,7 +7,8 @@
       "name": "l01c01_introduction_to_colab_and_python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Jaidon-Smith/TensorFlow-examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -43,7 +54,7 @@
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -53,22 +64,6 @@
       },
       "source": [
         "## **Introduction to Colab and Python**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OVi775ZJ2bsy"
-      },
-      "source": [
-        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-        "  </td>\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
-        "  </td>\n",
-        "</table>"
       ]
     },
     {
@@ -130,7 +125,7 @@
         "  r = HelloWorldXY(i,i)\n",
         "  print(\"Result from HelloWorld: {}\".format(r))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +160,7 @@
       "source": [
         "print(HelloWorldXY(1,2))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +259,7 @@
         "for i,e in enumerate(a):\n",
         "  print(\"Index: {}, was: {}\".format(i, e))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +296,7 @@
         "print(\"Average: {}\".format(np.average(b)))\n",
         "print(\"Max index: {}\".format(np.argmax(b)))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +325,7 @@
         "print(\"\\nYou can print the type of anything\")\n",
         "print(\"Type of b: {}, type of b[0]: {}\".format(type(b), type(b[0])))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +353,7 @@
         "c = np.random.rand(3, 3)\n",
         "print(c)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +385,7 @@
         "print(\"Shape of c: {}\".format(c.shape))\n",
         "print(\"...Observe, Python uses both [0,1,2] and (0,1,2) to specify lists\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +434,7 @@
         "!ls -l\n",
         "!pwd"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,7 +463,7 @@
         "print(\"Install numpy\")  # Just for test, numpy is actually preinstalled in all Colab instances\n",
         "!pip install numpy"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +506,7 @@
         "!ls\n",
         "print(\"Hello\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
