--- a/courses/udacity_intro_to_tensorflow_for_deep_learning/l02c01_celsius_to_fahrenheit.ipynb
+++ b/courses/udacity_intro_to_tensorflow_for_deep_learning/l02c01_celsius_to_fahrenheit.ipynb
@@ -37,6 +37,98 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ZltRXBJZSIQX",
+        "outputId": "5aae5b34-7703-4295-d536-981b5a0e2fe8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "colab_environment = True\n",
+        "document_url = \"https://colab.research.google.com/github/Jaidon-Smith/TensorFlow-examples/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l02c01_celsius_to_fahrenheit.ipynb#scrollTo=ZltRXBJZSIQX\"\n",
+        "\n",
+        "if colab_environment:\n",
+        "  #Get the github ssh command and cd directory from the document url\n",
+        "  import urllib \n",
+        "  document_url = urllib.parse.unquote(document_url)\n",
+        "  repository_ssh = \"/\".join(document_url.split(\"github/\")[1].split(\"/\")[0:2])\n",
+        "  repository_ssh = \"git@github.com:{}.git\".format(repository_ssh)\n",
+        "  directory_name = \"/\".join(document_url.split(\"github/\")[1].split(\"/\")[4:-1])\n",
+        "  # Mount google drive\n",
+        "  from google.colab import drive\n",
+        "  drive.mount('/content/drive')\n",
+        "  # Copy the ssh folder from my google drive to the root\n",
+        "  !cp -R \"/content/drive/My Drive/Colab Notebooks/github_integration/.ssh\" \"/root/\"\n",
+        "  # Copy the gitconfig folder from my google drive to the root\n",
+        "  !cp \"/content/drive/My Drive/Colab Notebooks/github_integration/.gitconfig\" \"/root/\"\n",
+        "  # Clone repository into virtual macine hardrive\n",
+        "  !git clone $repository_ssh\n",
+        "  # cd into the directory\n",
+        "  repository_name = repository_ssh.split(\"/\")[1].split(\".\")[0]\n",
+        "  directory = \"/content/{}/{}\".format(repository_name, directory_name)\n",
+        "  %cd $directory"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n",
+            "Cloning into 'TensorFlow-examples'...\n",
+            "Warning: Permanently added the RSA host key for IP address '140.82.121.4' to the list of known hosts.\n",
+            "remote: Enumerating objects: 12249, done.\u001b[K\n",
+            "remote: Total 12249 (delta 0), reused 0 (delta 0), pack-reused 12249\u001b[K\n",
+            "Receiving objects: 100% (12249/12249), 112.18 MiB | 19.19 MiB/s, done.\n",
+            "Resolving deltas: 100% (6337/6337), done.\n",
+            "Checking out files: 100% (1989/1989), done.\n",
+            "/content/TensorFlow-examples/courses/udacity_intro_to_tensorflow_for_deep_learning\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sVQL7yXjSU2N",
+        "outputId": "1bd18c38-74e7-4b00-fd5c-5977dc1069a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "file_name = \"l02c01_celsius_to_fahrenheit.ipynb\"\n",
+        "\n",
+        "output_name = file_name.split(\".ipynb\")[0]+\".html\"\n",
+        "!jupyter nbconvert --to html $file_name\n",
+        "!cp  $output_name \"/content\""
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[NbConvertApp] Converting notebook l02c01_celsius_to_fahrenheit.ipynb to html\n",
+            "[NbConvertApp] Writing 322332 bytes to l02c01_celsius_to_fahrenheit.html\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8z7cPQiqSU2P"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "cellView": "form",
         "id": "IwtS_OXU5cWG"
       },
@@ -124,7 +216,7 @@
       "source": [
         "import tensorflow as tf"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,23 +230,23 @@
         "logger = tf.get_logger()\n",
         "logger.setLevel(logging.ERROR)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fj8rYp8thB_B",
-        "outputId": "4cca5571-369b-41b7-8ea0-adf4b6d01e08",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "4cca5571-369b-41b7-8ea0-adf4b6d01e08"
       },
       "source": [
         "type(logger)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,11 +287,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "gg4pn6aI1vms",
-        "outputId": "5adf5e31-16fe-42fb-cb81-6017eb76a8af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        }
+        },
+        "outputId": "5adf5e31-16fe-42fb-cb81-6017eb76a8af"
       },
       "source": [
         "celsius_q    = np.array([-40, -10,  0,  8, 15, 22,  38],  dtype=float)\n",
@@ -208,7 +300,7 @@
         "for i,c in enumerate(celsius_q):\n",
         "  print(\"{} degrees Celsius = {} degrees Fahrenheit\".format(c, fahrenheit_a[i]))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +359,7 @@
       "source": [
         "l0 = tf.keras.layers.Dense(units=1, input_shape=[1])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +383,7 @@
       "source": [
         "model = tf.keras.Sequential([l0])"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,7 +427,7 @@
         "model.compile(loss='mean_squared_error',\n",
         "              optimizer=tf.keras.optimizers.Adam(0.1))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -374,17 +466,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "lpRrl7WK10Pq",
-        "outputId": "8a362e2f-b4dd-45f0-8c3f-6a032bceb787",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "8a362e2f-b4dd-45f0-8c3f-6a032bceb787"
       },
       "source": [
         "history = model.fit(celsius_q, fahrenheit_a, epochs=500, verbose=False)\n",
         "print(\"Finished training the model\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,11 +513,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "IeK6BzfbdO6_",
-        "outputId": "25df38ab-44fe-449c-98ea-9bea43107c64",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "outputId": "25df38ab-44fe-449c-98ea-9bea43107c64"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -433,7 +525,7 @@
         "plt.ylabel(\"Loss Magnitude\")\n",
         "plt.plot(history.history['loss'])"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -479,16 +571,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "oxNzL4lS2Gui",
-        "outputId": "e5d20b4e-e650-4b4e-ba54-2f5f45985388",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "e5d20b4e-e650-4b4e-ba54-2f5f45985388"
       },
       "source": [
         "print(model.predict([100.0]))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,16 +623,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "kmIkVdkbnZJI",
-        "outputId": "8db4c989-5ead-4f11-b942-cf3b7575cd03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
-        }
+        },
+        "outputId": "8db4c989-5ead-4f11-b942-cf3b7575cd03"
       },
       "source": [
         "print(\"These are the layer variables: {}\".format(l0.get_weights()))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,11 +666,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Y2zTA-rDS5Xk",
-        "outputId": "0b9b25df-3982-4a8f-a285-cdab886a5d13",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 260
-        }
+        },
+        "outputId": "0b9b25df-3982-4a8f-a285-cdab886a5d13"
       },
       "source": [
         "l0 = tf.keras.layers.Dense(units=4, input_shape=[1])\n",
@@ -594,7 +686,7 @@
         "print(\"These are the l1 variables: {}\".format(l1.get_weights()))\n",
         "print(\"These are the l2 variables: {}\".format(l2.get_weights()))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
