--- a/courses/udacity_intro_to_tensorflow_for_deep_learning/l03c01_classifying_images_of_clothing.ipynb
+++ b/courses/udacity_intro_to_tensorflow_for_deep_learning/l03c01_classifying_images_of_clothing.ipynb
@@ -19,10 +19,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "z-B_p6JSN3qd",
-        "outputId": "5c1fe0cc-ee52-4538-b3f2-3358b25e1e1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "88ef3a85-8c91-4b11-a09d-0e2ea3dad3b1"
       },
       "source": [
         "colab_environment = True\n",
@@ -56,18 +56,44 @@
           "text": [
             "Mounted at /content/drive\n",
             "Cloning into 'TensorFlow-examples'...\n",
-            "Warning: Permanently added the RSA host key for IP address '192.30.255.112' to the list of known hosts.\n",
-            "remote: Enumerating objects: 31, done.\u001b[K\n",
-            "remote: Counting objects: 100% (31/31), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (22/22), done.\u001b[K\n",
-            "remote: Total 12244 (delta 7), reused 29 (delta 7), pack-reused 12213\u001b[K\n",
-            "Receiving objects: 100% (12244/12244), 112.13 MiB | 33.56 MiB/s, done.\n",
-            "Resolving deltas: 100% (6329/6329), done.\n",
+            "Warning: Permanently added the RSA host key for IP address '140.82.113.4' to the list of known hosts.\n",
+            "remote: Enumerating objects: 5, done.\u001b[K\n",
+            "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Total 12254 (delta 0), reused 0 (delta 0), pack-reused 12249\u001b[K\n",
+            "Receiving objects: 100% (12254/12254), 112.20 MiB | 39.63 MiB/s, done.\n",
+            "Resolving deltas: 100% (6334/6334), done.\n",
             "/content/TensorFlow-examples/courses/udacity_intro_to_tensorflow_for_deep_learning\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bYNnv4rqUpgm"
+      },
+      "source": [
+        "file_name = \"l03c01_classifying_images_of_clothing.ipynb\"\n",
+        "\n",
+        "output_name = file_name.split(\".ipynb\")[0]+\".html\"\n",
+        "!jupyter nbconvert --to html $file_name\n",
+        "!cp  $output_name \"/content\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g6gLdMDXUpgn"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -200,7 +226,7 @@
       "source": [
         "import tensorflow as tf"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +244,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -231,7 +257,7 @@
         "logger = tf.get_logger()\n",
         "logger.setLevel(logging.ERROR)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +303,7 @@
         "dataset, metadata = tfds.load('fashion_mnist', as_supervised=True, with_info=True, data_dir=\"./tensorflow_datasets\")\n",
         "train_dataset, test_dataset = dataset['train'], dataset['test']"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,7 +378,7 @@
         "class_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat',\n",
         "               'Sandal',      'Shirt',   'Sneaker',  'Bag',   'Ankle boot']"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -370,10 +396,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "MaOTZxFzi48X",
-        "outputId": "f42d6bb2-c521-49ce-9db0-c95f02cf6481",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f42d6bb2-c521-49ce-9db0-c95f02cf6481"
       },
       "source": [
         "num_train_examples = metadata.splits['train'].num_examples\n",
@@ -381,7 +407,7 @@
         "print(\"Number of training examples: {}\".format(num_train_examples))\n",
         "print(\"Number of test examples:     {}\".format(num_test_examples))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,7 +451,7 @@
         "train_dataset =  train_dataset.cache()\n",
         "test_dataset  =  test_dataset.cache()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,11 +469,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "oSzE9l7PjHx0",
-        "outputId": "6a6a5511-a55c-4331-bd39-6e3bb27bb2d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 268
-        }
+        },
+        "outputId": "6a6a5511-a55c-4331-bd39-6e3bb27bb2d3"
       },
       "source": [
         "# Take a single image, and remove the color dimension by reshaping\n",
@@ -462,7 +488,7 @@
         "plt.grid(False)\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -492,11 +518,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "oZTImqg_CaW1",
-        "outputId": "67618829-8e6b-4cf2-eb9b-a0ffc7b66b8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 588
-        }
+        },
+        "outputId": "67618829-8e6b-4cf2-eb9b-a0ffc7b66b8d"
       },
       "source": [
         "plt.figure(figsize=(10,10))\n",
@@ -512,7 +538,7 @@
         "    i += 1\n",
         "plt.show()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -564,7 +590,7 @@
         "    tf.keras.layers.Dense(10, activation=tf.nn.softmax)\n",
         "])"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -604,7 +630,7 @@
         "              loss=tf.keras.losses.SparseCategoricalCrossentropy(),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -638,22 +664,22 @@
         "train_dataset = train_dataset.cache().repeat().shuffle(num_train_examples).batch(BATCH_SIZE)\n",
         "test_dataset = test_dataset.cache().batch(BATCH_SIZE)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "xvwvpA64CaW_",
-        "outputId": "ce943b6c-0a67-4931-a0ed-f1a8853ad294",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ce943b6c-0a67-4931-a0ed-f1a8853ad294"
       },
       "source": [
         "model.fit(train_dataset, epochs=5, steps_per_epoch=math.ceil(num_train_examples/BATCH_SIZE))"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
