--- a/courses/udacity_intro_to_tensorflow_for_deep_learning/l09c01_nlp_turn_words_into_tokens.ipynb
+++ b/courses/udacity_intro_to_tensorflow_for_deep_learning/l09c01_nlp_turn_words_into_tokens.ipynb
@@ -1,4 +1,18 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "l09c01_nlp_turn_words_into_tokens.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -11,12 +25,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "_ckMIh7O7s6D"
       },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,7 +41,9 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -76,15 +90,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "EN1-FZodOuPl"
       },
-      "outputs": [],
       "source": [
         "# Import the Tokenizer\n",
         "from tensorflow.keras.preprocessing.text import Tokenizer\n"
-      ]
+      ],
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -99,11 +113,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "RMiq8BpWVVRa"
       },
-      "outputs": [],
       "source": [
         "sentences = [\n",
         "    'My favorite food is ice cream',\n",
@@ -113,7 +125,9 @@
         "    \"chocolate isn't good for dogs\",\n",
         "    \"your dog, your cat, and your parrot prefer broccoli\"\n",
         "]"
-      ]
+      ],
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -128,18 +142,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "ZHTK1DAlQ1zO"
       },
-      "outputs": [],
       "source": [
         "# Optionally set the max number of words to tokenize.\n",
         "# The out of vocabulary (OOV) token represents words that are not in the index.\n",
         "# Call fit_on_text() on the tokenizer to generate unique numbers for each word\n",
         "tokenizer = Tokenizer(num_words = 100, oov_token=\"<OOV>\")\n",
         "tokenizer.fit_on_texts(sentences)\n"
-      ]
+      ],
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -157,27 +171,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "kX4VvsLySC7Z"
+        "id": "kX4VvsLySC7Z",
+        "outputId": "dbff3faa-ed66-4652-c5b8-9fbaff31f508",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "# Examine the word index\n",
         "word_index = tokenizer.word_index\n",
         "print(word_index)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'<OOV>': 1, 'your': 2, 'ice': 3, 'cream': 4, 'my': 5, 'favorite': 6, 'is': 7, 'dog': 8, 'chocolate': 9, 'food': 10, 'do': 11, 'you': 12, 'like': 13, 'too': 14, 'likes': 15, 'flavor': 16, 'of': 17, 'icecream': 18, \"isn't\": 19, 'good': 20, 'for': 21, 'dogs': 22, 'cat': 23, 'and': 24, 'parrot': 25, 'prefer': 26, 'broccoli': 27}\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "JXKrGxsIVtLo"
+        "id": "JXKrGxsIVtLo",
+        "outputId": "81f2d1e8-7b1b-41aa-8163-f0ad3fd69ea9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "# Get the number for a given word\n",
         "print(word_index['favorite'])"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -193,14 +231,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "QlUL6Ybf1sso"
+        "id": "QlUL6Ybf1sso",
+        "outputId": "845a46dc-4c53-46f4-b40d-39aaa3b8e4cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "sequences = tokenizer.texts_to_sequences(sentences)\n",
         "print (sequences)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[5, 6, 10, 7, 3, 4], [11, 12, 13, 3, 4, 14], [5, 8, 15, 3, 4], [2, 6, 16, 17, 18, 7, 9], [9, 19, 20, 21, 22], [2, 8, 2, 23, 24, 2, 25, 26, 27]]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -218,30 +268,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "Fir7qd6X8eZc"
+        "id": "Fir7qd6X8eZc",
+        "outputId": "fade84fd-0a7d-4ea6-fc51-8a45feb90e7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "sentences2 = [\"I like hot chocolate\", \"My dogs and my hedgehog like kibble but my squirrel prefers grapes and my chickens like ice cream, preferably vanilla\"]\n",
         "\n",
         "sequences2 = tokenizer.texts_to_sequences(sentences2)\n",
         "print(sequences2)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1, 13, 1, 9], [5, 22, 24, 5, 1, 13, 1, 1, 5, 1, 1, 1, 24, 5, 1, 13, 3, 4, 1, 1]]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "collapsed_sections": [],
-      "name": "l09c01_nlp_turn_words_into_tokens.ipynb",
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
