--- a/courses/udacity_intro_to_tensorflow_for_deep_learning/l09c02_nlp_padding.ipynb
+++ b/courses/udacity_intro_to_tensorflow_for_deep_learning/l09c02_nlp_padding.ipynb
@@ -1,4 +1,18 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "l09c02_nlp_padding.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -11,12 +25,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "_ckMIh7O7s6D"
       },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,7 +41,9 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -82,16 +96,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "_ZxQf11OUtQI"
       },
-      "outputs": [],
       "source": [
         "# Import Tokenizer and pad_sequences\n",
         "from tensorflow.keras.preprocessing.text import Tokenizer\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences"
-      ]
+      ],
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -106,11 +120,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "PwM7IP2lTr7T"
+        "id": "PwM7IP2lTr7T",
+        "outputId": "9a80546e-471b-4f3e-cde8-dda331850ee0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "sentences = [\n",
         "    'My favorite food is ice cream',\n",
@@ -121,6 +137,16 @@
         "    \"your dog, your cat, and your parrot prefer broccoli\"\n",
         "]\n",
         "print(sentences)\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['My favorite food is ice cream', 'do you like ice cream too?', 'My dog likes ice cream!', 'your favorite flavor of icecream is chocolate', \"chocolate isn't good for dogs\", 'your dog, your cat, and your parrot prefer broccoli']\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -135,14 +161,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "P7wuOJaBWiHZ"
       },
-      "outputs": [],
       "source": [
         "tokenizer = Tokenizer(num_words = 100, oov_token=\"<OOV>\")"
-      ]
+      ],
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -155,15 +181,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "YXooiuwrXROU"
+        "id": "YXooiuwrXROU",
+        "outputId": "d617fb15-ea45-4cd4-d374-9cb8b26c8920",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "tokenizer.fit_on_texts(sentences)\n",
         "word_index = tokenizer.word_index\n",
         "print(word_index)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'<OOV>': 1, 'your': 2, 'ice': 3, 'cream': 4, 'my': 5, 'favorite': 6, 'is': 7, 'dog': 8, 'chocolate': 9, 'food': 10, 'do': 11, 'you': 12, 'like': 13, 'too': 14, 'likes': 15, 'flavor': 16, 'of': 17, 'icecream': 18, \"isn't\": 19, 'good': 20, 'for': 21, 'dogs': 22, 'cat': 23, 'and': 24, 'parrot': 25, 'prefer': 26, 'broccoli': 27}\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -185,14 +223,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "70l5x1XRXoV4"
+        "id": "70l5x1XRXoV4",
+        "outputId": "6fe7a165-c08b-4edd-c1e3-139723350509",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "sequences = tokenizer.texts_to_sequences(sentences)\n",
         "print (sequences)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[5, 6, 10, 7, 3, 4], [11, 12, 13, 3, 4, 14], [5, 8, 15, 3, 4], [2, 6, 16, 17, 18, 7, 9], [9, 19, 20, 21, 22], [2, 8, 2, 23, 24, 2, 25, 26, 27]]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -218,56 +268,130 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "r0m_nqHg4gqu"
+        "id": "r0m_nqHg4gqu",
+        "outputId": "8b13979c-5587-46f1-ca14-81833b2faa64",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "padded = pad_sequences(sequences)\n",
         "print(\"\\nWord Index = \" , word_index)\n",
         "print(\"\\nSequences = \" , sequences)\n",
         "print(\"\\nPadded Sequences:\")\n",
         "print(padded)\n"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Word Index =  {'<OOV>': 1, 'your': 2, 'ice': 3, 'cream': 4, 'my': 5, 'favorite': 6, 'is': 7, 'dog': 8, 'chocolate': 9, 'food': 10, 'do': 11, 'you': 12, 'like': 13, 'too': 14, 'likes': 15, 'flavor': 16, 'of': 17, 'icecream': 18, \"isn't\": 19, 'good': 20, 'for': 21, 'dogs': 22, 'cat': 23, 'and': 24, 'parrot': 25, 'prefer': 26, 'broccoli': 27}\n",
+            "\n",
+            "Sequences =  [[5, 6, 10, 7, 3, 4], [11, 12, 13, 3, 4, 14], [5, 8, 15, 3, 4], [2, 6, 16, 17, 18, 7, 9], [9, 19, 20, 21, 22], [2, 8, 2, 23, 24, 2, 25, 26, 27]]\n",
+            "\n",
+            "Padded Sequences:\n",
+            "[[ 0  0  0  5  6 10  7  3  4]\n",
+            " [ 0  0  0 11 12 13  3  4 14]\n",
+            " [ 0  0  0  0  5  8 15  3  4]\n",
+            " [ 0  0  2  6 16 17 18  7  9]\n",
+            " [ 0  0  0  0  9 19 20 21 22]\n",
+            " [ 2  8  2 23 24  2 25 26 27]]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "VzbGtYWQ6Ofo"
+        "id": "VzbGtYWQ6Ofo",
+        "outputId": "8210d628-df1b-42c8-db2f-22292d862083",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "# Specify a max length for the padded sequences\n",
         "padded = pad_sequences(sequences, maxlen=15)\n",
         "print(padded)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 0  0  0  0  0  0  0  0  0  5  6 10  7  3  4]\n",
+            " [ 0  0  0  0  0  0  0  0  0 11 12 13  3  4 14]\n",
+            " [ 0  0  0  0  0  0  0  0  0  0  5  8 15  3  4]\n",
+            " [ 0  0  0  0  0  0  0  0  2  6 16 17 18  7  9]\n",
+            " [ 0  0  0  0  0  0  0  0  0  0  9 19 20 21 22]\n",
+            " [ 0  0  0  0  0  0  2  8  2 23 24  2 25 26 27]]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "HzkbHi0B64w8"
+        "id": "HzkbHi0B64w8",
+        "outputId": "5c0f0987-6f0f-47a2-ba9b-2cde03c96f9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "# Put the padding at the end of the sequences\n",
         "padded = pad_sequences(sequences, maxlen=15, padding=\"post\")\n",
         "print(padded)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 5  6 10  7  3  4  0  0  0  0  0  0  0  0  0]\n",
+            " [11 12 13  3  4 14  0  0  0  0  0  0  0  0  0]\n",
+            " [ 5  8 15  3  4  0  0  0  0  0  0  0  0  0  0]\n",
+            " [ 2  6 16 17 18  7  9  0  0  0  0  0  0  0  0]\n",
+            " [ 9 19 20 21 22  0  0  0  0  0  0  0  0  0  0]\n",
+            " [ 2  8  2 23 24  2 25 26 27  0  0  0  0  0  0]]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "OLHheI477okX"
+        "id": "OLHheI477okX",
+        "outputId": "f086e146-f198-4ca9-d1d6-18c1f8fdff43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "# Limit the length of the sequences, you will see some sequences get truncated\n",
         "padded = pad_sequences(sequences, maxlen=3)\n",
         "print(padded)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 7  3  4]\n",
+            " [ 3  4 14]\n",
+            " [15  3  4]\n",
+            " [18  7  9]\n",
+            " [20 21 22]\n",
+            " [25 26 27]]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -283,11 +407,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "iqodOpn64c2U"
+        "id": "iqodOpn64c2U",
+        "outputId": "0d104a1b-b750-480e-ade8-9fc74cb2b337",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
       "source": [
         "# Try turning sentences that contain words that \n",
         "# aren't in the word index into sequences.\n",
@@ -313,20 +439,24 @@
         "# Notice that \"1\" appears in the sequence wherever there's a word \n",
         "# that's not in the word index\n",
         "print(padded)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[\"my best friend's favorite ice cream flavor is strawberry\", \"my dog's best friend is a manatee\"]\n",
+            "<OOV> has the number 1 in the word index.\n",
+            "\n",
+            "Test Sequence =  [[5, 1, 1, 6, 3, 4, 16, 7, 1], [5, 1, 1, 1, 7, 1, 1]]\n",
+            "\n",
+            "Padded Test Sequence: \n",
+            "[[ 0  5  1  1  6  3  4 16  7  1]\n",
+            " [ 0  0  0  5  1  1  1  7  1  1]]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "collapsed_sections": [],
-      "name": "l09c02_nlp_padding.ipynb",
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
